--- a/ShopManagement/Views/Shop/AddShop.cshtml
+++ b/ShopManagement/Views/Shop/AddShop.cshtml
@@ -41,6 +41,14 @@
                             </div>
                         </div>
                         <div class="form-group">
+                            <label>Mobile Number</label>
+                            <input type="number" class="form-control ShopMobileNumber">
+                        </div>
+                        <div class="form-group">
+                            <label>Maximum Orders</label> <small>\per day</small>
+                            <input type="number" class="form-control MaxOrderCountForShop">
+                        </div>
+                        <div class="form-group">
                             <label>Choose User</label>
                             <select class="form-control select2 ShopManager">
                                 @foreach (var item in Model)
@@ -51,11 +59,7 @@
                         </div>
                         <div class="form-group">
                             <label>Image</label>
-                            <input type="file" class="form-control invoice-input ShopImage" style="padding:.375rem .75rem;">
-                        </div>
-                        <div class="form-group">
-                            <label>Notes</label>
-                            <textarea class="form-control ShopNotes"></textarea>
+                            <input type="file" class="form-control invoice-input ShopImage" id="ShopImage" style="padding:.375rem .75rem;">
                         </div>
                         <div class="form-group">
                             <label>Status</label>
@@ -73,12 +77,8 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label>Mobile Number</label>
-                            <input type="number" class="form-control ShopMobileNumber">
-                        </div>
-                        <div class="form-group">
-                            <label>Maximum Orders</label> <small>\per day</small>
-                            <input type="number" class="form-control MaxOrderCountForShop">
+                            <label>Notes</label>
+                            <textarea class="form-control ShopNotes"></textarea>
                         </div>
                         <span class="text-danger customErrorMessageAddShop"></span>
                         <button class="btn btn-block btn-info AddShopFromSubmit" type="button">Submit</button>
