--- a/ShopManagement/Views/User/viewAllUser.cshtml
+++ b/ShopManagement/Views/User/viewAllUser.cshtml
@@ -74,7 +74,7 @@
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title">Edit User - <strong class="SelectedUserName"></strong> </h5>
+                <h5 class="modal-title">Edit User - <strong class="text-info SelectedUserNameModelTitle"></strong> </h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
