Added Basic Functionalities

--- a/ShopManagement/Views/Slider/AddImage.cshtml
+++ b/ShopManagement/Views/Slider/AddImage.cshtml
@@ -27,7 +27,7 @@
                     <div class="card-body">
                         <div class="form-group">
                             <label>Choose Quality</label>
-                            <select class="form-control select2">
+                            <select class="form-control select2 ImageStatus">
                                 <option>High</option>
                                 <option>Medium</option>
                                 <option>Low</option>
@@ -38,6 +38,7 @@
                                 <input name="file" type="file" multiple />
                             </div>
                         </form>
+                        <button type="button" class="btn btn-block btn-info SubmitUploadedImages">Submit</button>
                     </div>
                 </div>
             </div>
@@ -52,4 +53,5 @@
 <script src="../../assets/modules/dropzonejs/min/dropzone.min.js"></script>
 
 <!-- Page Specific JS File -->
-<script src="../../assets/js/page/components-multiple-upload.js"></script>
+@*<script src="../../assets/js/page/components-multiple-upload.js"></script>*@
+<script src="~/App-Assests/Js/Slider.js"></script>
