--- a/ShopManagement/Views/Account/Login.cshtml
+++ b/ShopManagement/Views/Account/Login.cshtml
@@ -24,6 +24,7 @@
     <!-- Template CSS -->
     <link rel="stylesheet" href="../../assets/css/style.css">
     <link rel="stylesheet" href="../../assets/css/components.css">
+    <link rel="stylesheet" href="~/App-Assests/CSS/Custom.css">
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-94034622-3"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
@@ -50,11 +51,8 @@
                             <div class="card-body">
                                 <form id="LoginForm">
                                     <div class="form-group">
-                                        <label for="email">Email</label>
-                                        <input id="email" type="text" class="form-control" name="email" tabindex="1" autofocus>
-                                        <div class="invalid-feedback">
-                                            Please fill in your email
-                                        </div>
+                                        <label for="number">Mobile Number</label>
+                                        <input id="number" type="number" class="form-control MobileNumber" name="email" tabindex="1" autofocus placeholder="Enter Mobile Number">
                                     </div>
 
                                     <div class="form-group">
@@ -66,10 +64,7 @@
                                                 </a>
                                             </div>
                                         </div>
-                                        <input id="password" type="password" class="form-control" name="password" tabindex="2">
-                                        <div class="invalid-feedback">
-                                            please fill in your password
-                                        </div>
+                                        <input id="password" type="password" class="form-control Password" name="password" tabindex="2" placeholder="Enter Password">
                                     </div>
 
                                     <div class="form-group">
@@ -80,6 +75,7 @@
                                     </div>
 
                                     <div class="form-group">
+                                        <span class="text-danger customErrorMessageLogin"></span>
                                         <button type="button" id="LoginFormSubmit" class="btn btn-primary btn-lg btn-block" tabindex="4">
                                             Login
                                         </button>
@@ -94,18 +90,31 @@
     </div>
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-94034622-3"></script>
     <script src="../../assets/modules/jquery.min.js"></script>
+    <script src="~/App-Assests/Js/Login.js"></script>
+    <script src="~/App-Assests/Js/Custom.js"></script>
     <script>
-    $("#LoginFormSubmit").click(function () {
-        ValidateLogin("", "");
-    });
+        $("#LoginFormSubmit").click(function () {
+            var MobileNumber = $(".MobileNumber").val();
+            var Password = $(".Password").val();
+            ValidateLogin(MobileNumber, Password);
+        });
 
-    $("#LoginForm").submit(function () {
-        ValidateLogin("", "");
-    });
+        $("#LoginForm").submit(function () {
+            var MobileNumber = $(".MobileNumber").val();
+            var Password = $(".Password").val();
+            ValidateLogin(MobileNumber, Password);
+        });
 
-    function ValidateLogin(MobileNumber, Password) {
-        window.location.href = "@Url.Action("Dashboard", "Dashboard")";
-    }
+        function CallBackValidateLogin(responseData) {
+            $("#LoginFormSubmit").removeClass("btn-progress");
+            if (responseData.message.status == "success") {
+                window.location.href = "@Url.Action("Dashboard", "Dashboard")";
+            }
+            else {
+                $(".customErrorMessageLogin").text("Invalid Login !");
+            }
+        }
+
     </script>
 </body>
 
