--- a/ShopManagement/Views/Shared/_Layout.cshtml
+++ b/ShopManagement/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no" name="viewport">
-    <title>FB Designer</title>
+    <title>FB Designer Emporium</title>
 
     <!-- General CSS Files -->
     <link rel="stylesheet" href="../../assets/modules/bootstrap/css/bootstrap.min.css">
@@ -44,8 +44,8 @@
                 <ul class="navbar-nav navbar-right">
                     <li class="dropdown">
                         <a href="javascript:void(0)" data-toggle="dropdown" class="nav-link dropdown-toggle nav-link-lg nav-link-user">
-                            <img alt="image" src="../../assets/img/avatar/avatar-1.png" class="rounded-circle mr-1">
-                            <div class="d-sm-none d-lg-inline-block">Hi, Divakar Jayagopi</div>
+                            <img alt="image" src="@Session["UserImage"].ToString()" class="rounded-circle mr-1">
+                            <div class="d-sm-none d-lg-inline-block">Hi, @Session["Name"].ToString()</div>
                         </a>
                         <div class="dropdown-menu dropdown-menu-right">
                             <a href="@Url.Action("UserProfile", "Account")" class="dropdown-item has-icon">
@@ -62,53 +62,124 @@
                     </li>
                 </ul>
             </nav>
+            @if (Session["IsAdmin"].ToString() == "1")
+            {
+                <div class="main-sidebar sidebar-style-2">
+                    <aside id="sidebar-wrapper">
+                        <div class="sidebar-brand">
+                            <a href="@Url.Action("Dashboard", "Dashboard")">FB Designer Emporium</a>
+                        </div>
+                        <div class="sidebar-brand sidebar-brand-sm">
+                            <a href="@Url.Action("Dashboard", "Dashboard")">DJ</a>
+                        </div>
+                        <ul class="sidebar-menu">
+                            <li class="menu-header">DashBoard</li>
+                            <li><a class="nav-link" href="@Url.Action("Dashboard", "Dashboard")"><i class="fas fa-fire"></i> <span>DashBoard</span></a></li>
 
-            <div class="main-sidebar sidebar-style-2">
-                <aside id="sidebar-wrapper">
-                    <div class="sidebar-brand">
-                        <a href="@Url.Action("Dashboard", "Dashboard")">FB Designer</a>
-                    </div>
-                    <div class="sidebar-brand sidebar-brand-sm">
-                        <a href="@Url.Action("Dashboard", "Dashboard")">DJ</a>
-                    </div>
-                    <ul class="sidebar-menu">
-                        <li class="menu-header">DashBoard</li>
-                        <li><a class="nav-link" href="@Url.Action("Dashboard", "Dashboard")"><i class="fas fa-fire"></i> <span>DashBoard</span></a></li>
+                            <li class="menu-header">User Management</li>
+                            <li><a class="nav-link" href="@Url.Action("AddUser", "User")"><i class="fas fa-user-plus"></i> <span>Add User</span></a></li>
+                            <li><a class="nav-link" href="@Url.Action("viewAllUser", "User")"><i class="fas fa-users"></i> <span>All Users</span></a></li>
 
-                        <li class="menu-header">User Management</li>
-                        <li><a class="nav-link" href="@Url.Action("AddUser", "User")"><i class="fas fa-user-plus"></i> <span>Add User</span></a></li>
-                        <li><a class="nav-link" href="@Url.Action("viewAllUser", "User")"><i class="fas fa-users"></i> <span>All Users</span></a></li>
+                            <li class="menu-header">Shop Management</li>
+                            <li><a class="nav-link" href="@Url.Action("AddShop", "Shop")"><i class="fas fa-shopping-bag"></i> <span>Add Shop</span></a></li>
+                            <li><a class="nav-link" href="@Url.Action("ViewAllShops", "Shop")"><i class="fas fa-shopping-basket"></i> <span>All Shops</span></a></li>
 
-                        <li class="menu-header">Shop Management</li>
-                        <li><a class="nav-link" href="@Url.Action("AddShop", "Shop")"><i class="fas fa-shopping-bag"></i> <span>Add Shop</span></a></li>
-                        <li><a class="nav-link" href="@Url.Action("ViewAllShops", "Shop")"><i class="fas fa-shopping-basket"></i> <span>All Shops</span></a></li>
+                            <li class="menu-header">Order Management</li>
+                            <li><a class="nav-link" href="@Url.Action("AddOrder", "Order")"><i class="fas fa-folder-plus"></i> <span>Add Order</span></a></li>
+                            <li><a class="nav-link" href="@Url.Action("ViewOrders", "Order")"><i class="fas fa-dolly"></i> <span>View Orders</span></a></li>
+                            <li><a class="nav-link" href="@Url.Action("OrdersManagement", "Order")"><i class="fas fa-hand-holding-usd"></i> <span>Orders Management</span></a></li>
 
-                        <li class="menu-header">Order Management</li>
-                        <li><a class="nav-link" href="@Url.Action("AddOrder", "Order")"><i class="fas fa-folder-plus"></i> <span>Add Order</span></a></li>
-                        <li><a class="nav-link" href="@Url.Action("ViewOrders", "Order")"><i class="fas fa-dolly"></i> <span>View Orders</span></a></li>
-                        <li><a class="nav-link" href="@Url.Action("OrdersManagement", "Order")"><i class="fas fa-hand-holding-usd"></i> <span>Orders Management</span></a></li>
-                        
-                        <li class="menu-header">Sliders</li>
-                        <li><a class="nav-link" href="@Url.Action("AddImage", "Slider")"><i class="fas fa-plus-circle"></i> <span>Add Photos</span></a></li>
-                        <li><a class="nav-link" href="@Url.Action("Gallery", "Slider")"><i class="fab fa-envira"></i> <span>Gallery</span></a></li>
-                        <li><a class="nav-link" href="@Url.Action("SliderSettings", "Slider")"><i class="fas fa-tasks"></i> <span>Slider Management</span></a></li>
-                    </ul>
-                </aside>
-            </div>
+                            <li class="menu-header">Sliders</li>
+                            <li><a class="nav-link" href="@Url.Action("AddImage", "Slider")"><i class="fas fa-plus-circle"></i> <span>Add Photos</span></a></li>
+                            <li><a class="nav-link" href="@Url.Action("Gallery", "Slider")"><i class="fab fa-envira"></i> <span>Gallery</span></a></li>
+                            <li><a class="nav-link" href="@Url.Action("SliderSettings", "Slider")"><i class="fas fa-tasks"></i> <span>Slider Management</span></a></li>
+                        </ul>
+                    </aside>
+                </div>
+            }
+            else if (Session["IsAdmin"].ToString() == "2")
+            {
+                <div class="main-sidebar sidebar-style-2">
+                    <aside id="sidebar-wrapper">
+                        <div class="sidebar-brand">
+                            <a href="@Url.Action("Dashboard", "Dashboard")">FB Designer Emporium</a>
+                        </div>
+                        <div class="sidebar-brand sidebar-brand-sm">
+                            <a href="@Url.Action("Dashboard", "Dashboard")">DJ</a>
+                        </div>
+                        <ul class="sidebar-menu">
+                            <li class="menu-header">DashBoard</li>
+                            <li><a class="nav-link" href="@Url.Action("Dashboard", "Dashboard")"><i class="fas fa-fire"></i> <span>DashBoard</span></a></li>
 
+                            @*<li class="menu-header">User Management</li>
+                            <li><a class="nav-link" href="@Url.Action("AddUser", "User")"><i class="fas fa-user-plus"></i> <span>Add User</span></a></li>
+                            <li><a class="nav-link" href="@Url.Action("viewAllUser", "User")"><i class="fas fa-users"></i> <span>All Users</span></a></li>
+
+                            <li class="menu-header">Shop Management</li>
+                            <li><a class="nav-link" href="@Url.Action("AddShop", "Shop")"><i class="fas fa-shopping-bag"></i> <span>Add Shop</span></a></li>
+                            <li><a class="nav-link" href="@Url.Action("ViewAllShops", "Shop")"><i class="fas fa-shopping-basket"></i> <span>All Shops</span></a></li>*@
+
+                            <li class="menu-header">Order Management</li>
+                            <li><a class="nav-link" href="@Url.Action("AddOrder", "Order")"><i class="fas fa-folder-plus"></i> <span>Add Order</span></a></li>
+                            <li><a class="nav-link" href="@Url.Action("ViewOrders", "Order")"><i class="fas fa-dolly"></i> <span>View Orders</span></a></li>
+                            <li><a class="nav-link" href="@Url.Action("OrdersManagement", "Order")"><i class="fas fa-hand-holding-usd"></i> <span>Orders Management</span></a></li>
+
+                            <li class="menu-header">Sliders</li>
+                            <li><a class="nav-link" href="@Url.Action("AddImage", "Slider")"><i class="fas fa-plus-circle"></i> <span>Add Photos</span></a></li>
+                            <li><a class="nav-link" href="@Url.Action("Gallery", "Slider")"><i class="fab fa-envira"></i> <span>Gallery</span></a></li>
+                            @*<li><a class="nav-link" href="@Url.Action("SliderSettings", "Slider")"><i class="fas fa-tasks"></i> <span>Slider Management</span></a></li>*@
+                        </ul>
+                    </aside>
+                </div>
+            }
+            else
+            {
+                <div class="main-sidebar sidebar-style-2">
+                    <aside id="sidebar-wrapper">
+                        <div class="sidebar-brand">
+                            <a href="@Url.Action("Dashboard", "Dashboard")">FB Designer Emporium</a>
+                        </div>
+                        <div class="sidebar-brand sidebar-brand-sm">
+                            <a href="@Url.Action("Dashboard", "Dashboard")">DJ</a>
+                        </div>
+                        <ul class="sidebar-menu">
+                            <li class="menu-header">DashBoard</li>
+                            <li><a class="nav-link" href="@Url.Action("Dashboard", "Dashboard")"><i class="fas fa-fire"></i> <span>DashBoard</span></a></li>
+
+                            @*<li class="menu-header">User Management</li>
+                            <li><a class="nav-link" href="@Url.Action("AddUser", "User")"><i class="fas fa-user-plus"></i> <span>Add User</span></a></li>
+                            <li><a class="nav-link" href="@Url.Action("viewAllUser", "User")"><i class="fas fa-users"></i> <span>All Users</span></a></li>
+
+                            <li class="menu-header">Shop Management</li>
+                            <li><a class="nav-link" href="@Url.Action("AddShop", "Shop")"><i class="fas fa-shopping-bag"></i> <span>Add Shop</span></a></li>
+                            <li><a class="nav-link" href="@Url.Action("ViewAllShops", "Shop")"><i class="fas fa-shopping-basket"></i> <span>All Shops</span></a></li>*@
+
+                            <li class="menu-header">Order Management</li>
+                            <li><a class="nav-link" href="@Url.Action("AddOrder", "Order")"><i class="fas fa-folder-plus"></i> <span>Add Order</span></a></li>
+                            <li><a class="nav-link" href="@Url.Action("ViewOrders", "Order")"><i class="fas fa-dolly"></i> <span>View Orders</span></a></li>
+                            <li><a class="nav-link" href="@Url.Action("OrdersManagement", "Order")"><i class="fas fa-hand-holding-usd"></i> <span>Orders Management</span></a></li>
+
+                            <li class="menu-header">Sliders</li>
+                            <li><a class="nav-link" href="@Url.Action("AddImage", "Slider")"><i class="fas fa-plus-circle"></i> <span>Add Photos</span></a></li>
+                            <li><a class="nav-link" href="@Url.Action("Gallery", "Slider")"><i class="fab fa-envira"></i> <span>Gallery</span></a></li>
+                            <li><a class="nav-link" href="@Url.Action("SliderSettings", "Slider")"><i class="fas fa-tasks"></i> <span>Slider Management</span></a></li>
+                        </ul>
+                    </aside>
+                </div>
+            }
             <!-- Main Content -->
             <div class="main-content">
                 @RenderBody()
             </div>
 
             @*<footer class="main-footer">
-                <div class="footer-left">
-                    Divakar Jayagopi
-                </div>
-                <div class="footer-right">
-                    Divakar Jayagopi
-                </div>
-            </footer>*@
+            <div class="footer-left">
+                Divakar Jayagopi
+            </div>
+            <div class="footer-right">
+                Divakar Jayagopi
+            </div>
+        </footer>*@
         </div>
     </div>
 
