--- a/ShopManagement/Views/User/AddUser.cshtml
+++ b/ShopManagement/Views/User/AddUser.cshtml
@@ -38,17 +38,6 @@
                                 <input type="text" class="form-control UserName">
                             </div>
                             <div class="form-group">
-                                <label>Email Id</label>
-                                <div class="input-group">
-                                    <div class="input-group-prepend">
-                                        <div class="input-group-text">
-                                            <i class="fas fa-mail-bulk"></i>
-                                        </div>
-                                    </div>
-                                    <input type="email" class="form-control UserEmailId">
-                                </div>
-                            </div>
-                            <div class="form-group">
                                 <label>Mobile Number</label>
                                 <div class="input-group">
                                     <div class="input-group-prepend">
@@ -57,6 +46,17 @@
                                         </div>
                                     </div>
                                     <input type="number" class="form-control UserMobileNumber">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label>Email Id</label>
+                                <div class="input-group">
+                                    <div class="input-group-prepend">
+                                        <div class="input-group-text">
+                                            <i class="fas fa-mail-bulk"></i>
+                                        </div>
+                                    </div>
+                                    <input type="email" class="form-control UserEmailId">
                                 </div>
                             </div>
                             <div class="form-group">
@@ -97,6 +97,13 @@
                             <div class="form-group">
                                 <label>Image</label>
                                 <input type="file" class="form-control invoice-input UserSelectedImage" id="UserImage" accept="image/x-png,image/gif,image/jpeg" style="padding:.375rem .75rem;">
+                            </div>
+                            <div class="form-group">
+                                <label>Special User</label>
+                                <select class="form-control select2 IsMediatorUser">
+                                    <option value="0">No</option>
+                                    <option value="2">Yes</option>
+                                </select>
                             </div>
                             <div class="form-group">
                                 <label>Notes</label>
