--- a/ShopManagement/Views/User/viewAllUser.cshtml
+++ b/ShopManagement/Views/User/viewAllUser.cshtml
@@ -69,7 +69,11 @@
                                 <div>
                                     <div class="btn-group">
                                         <a href="javascript:void(0)" class="EditUserInfo" data-id="@item.Id"><i class="fas fa-edit"></i></a>
-                                        <a href="javascript:void(0)" class="DeleteUser" data-id="@item.Id" data-UserName="@item.Name"><i class="fas fa-trash-alt"></i></a>
+                                        @if (item.Id != Session["UserId"].ToString())
+                                        {
+                                            <a href="javascript:void(0)" class="DeleteUser" data-id="@item.Id" data-UserName="@item.Name"><i class="fas fa-trash-alt"></i></a>
+                                        }
+
                                     </div>
                                 </div>
                             </div>
@@ -99,17 +103,6 @@
                             <input type="text" class="form-control UserName">
                         </div>
                         <div class="form-group">
-                            <label>Email Id</label>
-                            <div class="input-group">
-                                <div class="input-group-prepend">
-                                    <div class="input-group-text">
-                                        <i class="fas fa-mail-bulk"></i>
-                                    </div>
-                                </div>
-                                <input type="email" class="form-control UserEmailId">
-                            </div>
-                        </div>
-                        <div class="form-group">
                             <label>Mobile Number</label>
                             <div class="input-group">
                                 <div class="input-group-prepend">
@@ -118,6 +111,17 @@
                                     </div>
                                 </div>
                                 <input type="number" class="form-control UserMobileNumber">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label>Email Id</label>
+                            <div class="input-group">
+                                <div class="input-group-prepend">
+                                    <div class="input-group-text">
+                                        <i class="fas fa-mail-bulk"></i>
+                                    </div>
+                                </div>
+                                <input type="email" class="form-control UserEmailId">
                             </div>
                         </div>
                         <div class="form-group">
@@ -140,7 +144,7 @@
                             <label>Area</label>
                             <input type="text" class="form-control invoice-input UserArea">
                         </div>
-                        <div class="form-group">
+                        <div class="form-group UserStatusField">
                             <label>Status</label>
                             <div class="form-group">
                                 <div class="selectgroup w-100">
@@ -158,6 +162,13 @@
                         <div class="form-group">
                             <label>Image</label>
                             <input type="file" class="form-control invoice-input UserSelectedImage" id="UserImage" accept="image/x-png,image/gif,image/jpeg" style="padding:.375rem .75rem;">
+                        </div>
+                        <div class="form-group">
+                            <label>Special User</label>
+                            <select class="form-control select2 IsMediatorUser">
+                                <option value="0">No</option>
+                                <option value="2">Yes</option>
+                            </select>
                         </div>
                         <div class="form-group">
                             <label>Notes</label>
