Fixed issues and added icons for menu

--- a/ShopManagement/Views/Dashboard/Dashboard.cshtml
+++ b/ShopManagement/Views/Dashboard/Dashboard.cshtml
@@ -75,15 +75,19 @@
                         <div class="card-stats-items">
                             <div class="card-stats-item">
                                 <div class="card-stats-item-count">24</div>
-                                <div class="card-stats-item-label">Pending</div>
+                                <div class="card-stats-item-label">Awaiting</div>
                             </div>
                             <div class="card-stats-item">
                                 <div class="card-stats-item-count">12</div>
-                                <div class="card-stats-item-label">In Progress</div>
+                                <div class="card-stats-item-label">InProgress</div>
                             </div>
                             <div class="card-stats-item">
                                 <div class="card-stats-item-count">23</div>
                                 <div class="card-stats-item-label">Completed</div>
+                            </div>
+                            <div class="card-stats-item">
+                                <div class="card-stats-item-count">23</div>
+                                <div class="card-stats-item-label">Dropped</div>
                             </div>
                         </div>
                     </div>
