--- a/ShopManagement/Views/Account/Login.cshtml
+++ b/ShopManagement/Views/Account/Login.cshtml
@@ -42,7 +42,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="login-brand">
-                            <a href="@Url.Action("Login", "Account")"><img src="../../assets/img/stisla-fill.svg" alt="logo" width="100" class="shadow-light rounded-circle"></a>
+                            <a href="@Url.Action("Login", "Account")"><img src="~/ImageStorage/Icons/ShopManagementLogo.jpg" alt="logo" width="150" class="shadow-light rounded-circle"></a>
                         </div>
 
                         <div class="card card-primary">
