--- a/ShopManagement/Views/Shared/_Layout.cshtml
+++ b/ShopManagement/Views/Shared/_Layout.cshtml
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="../../assets/css/style.css">
     <link rel="stylesheet" href="../../assets/css/components.css">
     <link rel="stylesheet" href="~/App-Assests/CSS/Custom.css">
+    <link rel="stylesheet" href="~/App-Assests/CSS/Icons.css">
     <!-- Start GA -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-94034622-3"></script>
 
@@ -70,29 +71,29 @@
                             <a href="@Url.Action("Dashboard", "Dashboard")">FB Designer Emporium</a>
                         </div>
                         <div class="sidebar-brand sidebar-brand-sm">
-                            <a href="@Url.Action("Dashboard", "Dashboard")">DJ</a>
+                            <a href="@Url.Action("Dashboard", "Dashboard")">FB</a>
                         </div>
                         <ul class="sidebar-menu">
-                            <li class="menu-header">DashBoard</li>
-                            <li><a class="nav-link" href="@Url.Action("Dashboard", "Dashboard")"><i class="fas fa-fire"></i> <span>DashBoard</span></a></li>
+                            <li class="menu-header text-info">DashBoard</li>
+                            <li><a class="nav-link" href="@Url.Action("Dashboard", "Dashboard")"><i class="DashBoardIcon"><img src="/ImageStorage/Icons/Dashboard.png" class="img-circle ImageAsIcon" /></i> <span>DashBoard</span></a></li>
 
-                            <li class="menu-header">User Management</li>
-                            <li><a class="nav-link" href="@Url.Action("AddUser", "User")"><i class="fas fa-user-plus"></i> <span>Add User</span></a></li>
-                            <li><a class="nav-link" href="@Url.Action("viewAllUser", "User")"><i class="fas fa-users"></i> <span>All Users</span></a></li>
+                            <li class="menu-header text-info">User Management</li>
+                            <li><a class="nav-link" href="@Url.Action("AddUser", "User")"><i class="DashBoardIcon"><img src="/ImageStorage/Icons/AddUser.png" class="img-circle ImageAsIcon" /></i> <span>Add User</span></a></li>
+                            <li><a class="nav-link" href="@Url.Action("viewAllUser", "User")"><i class="DashBoardIcon"><img src="/ImageStorage/Icons/ViewAllUsers.png" class="img-circle ImageAsIcon" /></i> <span>All Users</span></a></li>
 
-                            <li class="menu-header">Shop Management</li>
-                            <li><a class="nav-link" href="@Url.Action("AddShop", "Shop")"><i class="fas fa-shopping-bag"></i> <span>Add Shop</span></a></li>
-                            <li><a class="nav-link" href="@Url.Action("ViewAllShops", "Shop")"><i class="fas fa-shopping-basket"></i> <span>All Shops</span></a></li>
+                            <li class="menu-header text-info">Shop Management</li>
+                            <li><a class="nav-link" href="@Url.Action("AddShop", "Shop")"><i class="DashBoardIcon"><img src="/ImageStorage/Icons/AddShop.png" class="img-circle ImageAsIcon" /></i> <span>Add Shop</span></a></li>
+                            <li><a class="nav-link" href="@Url.Action("ViewAllShops", "Shop")"><i class="DashBoardIcon"><img src="/ImageStorage/Icons/ViewAllShops.png" class="img-circle ImageAsIcon" /></i> <span>All Shops</span></a></li>
 
-                            <li class="menu-header">Order Management</li>
-                            <li><a class="nav-link" href="@Url.Action("AddOrder", "Order")"><i class="fas fa-folder-plus"></i> <span>Add Order</span></a></li>
-                            <li><a class="nav-link" href="@Url.Action("ViewOrders", "Order")"><i class="fas fa-dolly"></i> <span>View Orders</span></a></li>
-                            <li><a class="nav-link" href="@Url.Action("OrdersManagement", "Order")"><i class="fas fa-hand-holding-usd"></i> <span>Orders Management</span></a></li>
+                            <li class="menu-header text-info">Order Management</li>
+                            <li><a class="nav-link" href="@Url.Action("AddOrder", "Order")"><i class="DashBoardIcon"><img src="/ImageStorage/Icons/AddOrder.png" class="img-circle ImageAsIcon" /></i> <span>Add Order</span></a></li>
+                            <li><a class="nav-link" href="@Url.Action("ViewOrders", "Order")"><i class="DashBoardIcon"><img src="/ImageStorage/Icons/ViewOrders.png" class="img-circle ImageAsIcon" /></i> <span>View Orders</span></a></li>
+                            <li><a class="nav-link" href="@Url.Action("OrdersManagement", "Order")"><i class="DashBoardIcon"><img src="/ImageStorage/Icons/OrdersManagement.png" class="img-circle ImageAsIcon" /></i> <span>Orders Management</span></a></li>
 
-                            <li class="menu-header">Sliders</li>
-                            <li><a class="nav-link" href="@Url.Action("AddImage", "Slider")"><i class="fas fa-plus-circle"></i> <span>Add Photos</span></a></li>
-                            <li><a class="nav-link" href="@Url.Action("Gallery", "Slider")"><i class="fab fa-envira"></i> <span>Gallery</span></a></li>
-                            <li><a class="nav-link" href="@Url.Action("SliderSettings", "Slider")"><i class="fas fa-tasks"></i> <span>Slider Management</span></a></li>
+                            <li class="menu-header text-info">Sliders</li>
+                            <li><a class="nav-link" href="@Url.Action("AddImage", "Slider")"><i class="DashBoardIcon"><img src="/ImageStorage/Icons/AddPhoto.png" class="img-circle ImageAsIcon" /></i> <span>Add Photos</span></a></li>
+                            <li><a class="nav-link" href="@Url.Action("Gallery", "Slider")"><i class="DashBoardIcon"><img src="/ImageStorage/Icons/Gallery.png" class="img-circle ImageAsIcon" /></i> <span>Gallery</span></a></li>
+                            <li><a class="nav-link" href="@Url.Action("SliderSettings", "Slider")"><i class="DashBoardIcon"><img src="/ImageStorage/Icons/SlideManagement.png" class="img-circle ImageAsIcon" /></i> <span>Slider Management</span></a></li>
                         </ul>
                     </aside>
                 </div>
@@ -105,29 +106,29 @@
                             <a href="@Url.Action("Dashboard", "Dashboard")">FB Designer Emporium</a>
                         </div>
                         <div class="sidebar-brand sidebar-brand-sm">
-                            <a href="@Url.Action("Dashboard", "Dashboard")">DJ</a>
+                            <a href="@Url.Action("Dashboard", "Dashboard")">FB</a>
                         </div>
                         <ul class="sidebar-menu">
-                            <li class="menu-header">DashBoard</li>
-                            <li><a class="nav-link" href="@Url.Action("Dashboard", "Dashboard")"><i class="fas fa-fire"></i> <span>DashBoard</span></a></li>
+                            <li class="menu-header text-info">DashBoard</li>
+                            <li><a class="nav-link" href="@Url.Action("Dashboard", "Dashboard")"><i class="DashBoardIcon"><img src="/ImageStorage/Icons/Dashboard.png" class="img-circle ImageAsIcon" /></i> <span>DashBoard</span></a></li>
 
-                            @*<li class="menu-header">User Management</li>
-                            <li><a class="nav-link" href="@Url.Action("AddUser", "User")"><i class="fas fa-user-plus"></i> <span>Add User</span></a></li>
-                            <li><a class="nav-link" href="@Url.Action("viewAllUser", "User")"><i class="fas fa-users"></i> <span>All Users</span></a></li>
+                            @*<li class="menu-header text-info">User Management</li>
+                            <li><a class="nav-link" href="@Url.Action("AddUser", "User")"><i class="DashBoardIcon"><img src="/ImageStorage/Icons/AddUser.png" class="img-circle ImageAsIcon" /></i> <span>Add User</span></a></li>
+                            <li><a class="nav-link" href="@Url.Action("viewAllUser", "User")"><i class="DashBoardIcon"><img src="/ImageStorage/Icons/ViewAllUsers.png" class="img-circle ImageAsIcon" /></i> <span>All Users</span></a></li>
 
-                            <li class="menu-header">Shop Management</li>
-                            <li><a class="nav-link" href="@Url.Action("AddShop", "Shop")"><i class="fas fa-shopping-bag"></i> <span>Add Shop</span></a></li>
-                            <li><a class="nav-link" href="@Url.Action("ViewAllShops", "Shop")"><i class="fas fa-shopping-basket"></i> <span>All Shops</span></a></li>*@
+                            <li class="menu-header text-info">Shop Management</li>
+                            <li><a class="nav-link" href="@Url.Action("AddShop", "Shop")"><i class="DashBoardIcon"><img src="/ImageStorage/Icons/AddShop.png" class="img-circle ImageAsIcon" /></i> <span>Add Shop</span></a></li>
+                            <li><a class="nav-link" href="@Url.Action("ViewAllShops", "Shop")"><i class="DashBoardIcon"><img src="/ImageStorage/Icons/ViewAllShops.png" class="img-circle ImageAsIcon" /></i> <span>All Shops</span></a></li>*@
 
-                            <li class="menu-header">Order Management</li>
-                            <li><a class="nav-link" href="@Url.Action("AddOrder", "Order")"><i class="fas fa-folder-plus"></i> <span>Add Order</span></a></li>
-                            <li><a class="nav-link" href="@Url.Action("ViewOrders", "Order")"><i class="fas fa-dolly"></i> <span>View Orders</span></a></li>
-                            <li><a class="nav-link" href="@Url.Action("OrdersManagement", "Order")"><i class="fas fa-hand-holding-usd"></i> <span>Orders Management</span></a></li>
+                            <li class="menu-header text-info">Order Management</li>
+                            <li><a class="nav-link" href="@Url.Action("AddOrder", "Order")"><i class="DashBoardIcon"><img src="/ImageStorage/Icons/AddOrder.png" class="img-circle ImageAsIcon" /></i> <span>Add Order</span></a></li>
+                            <li><a class="nav-link" href="@Url.Action("ViewOrders", "Order")"><i class="DashBoardIcon"><img src="/ImageStorage/Icons/ViewOrders.png" class="img-circle ImageAsIcon" /></i> <span>View Orders</span></a></li>
+                            <li><a class="nav-link" href="@Url.Action("OrdersManagement", "Order")"><i class="DashBoardIcon"><img src="/ImageStorage/Icons/OrdersManagement.png" class="img-circle ImageAsIcon" /></i> <span>Orders Management</span></a></li>
 
-                            <li class="menu-header">Sliders</li>
-                            <li><a class="nav-link" href="@Url.Action("AddImage", "Slider")"><i class="fas fa-plus-circle"></i> <span>Add Photos</span></a></li>
-                            <li><a class="nav-link" href="@Url.Action("Gallery", "Slider")"><i class="fab fa-envira"></i> <span>Gallery</span></a></li>
-                            @*<li><a class="nav-link" href="@Url.Action("SliderSettings", "Slider")"><i class="fas fa-tasks"></i> <span>Slider Management</span></a></li>*@
+                            <li class="menu-header text-info">Sliders</li>
+                            <li><a class="nav-link" href="@Url.Action("AddImage", "Slider")"><i class="DashBoardIcon"><img src="/ImageStorage/Icons/AddPhoto.png" class="img-circle ImageAsIcon" /></i> <span>Add Photos</span></a></li>
+                            <li><a class="nav-link" href="@Url.Action("Gallery", "Slider")"><i class="DashBoardIcon"><img src="/ImageStorage/Icons/Gallery.png" class="img-circle ImageAsIcon" /></i> <span>Gallery</span></a></li>
+                            <li><a class="nav-link" href="@Url.Action("SliderSettings", "Slider")"><i class="DashBoardIcon"><img src="/ImageStorage/Icons/SlideManagement.png" class="img-circle ImageAsIcon" /></i> <span>Slider Management</span></a></li>
                         </ul>
                     </aside>
                 </div>
@@ -140,29 +141,29 @@
                             <a href="@Url.Action("Dashboard", "Dashboard")">FB Designer Emporium</a>
                         </div>
                         <div class="sidebar-brand sidebar-brand-sm">
-                            <a href="@Url.Action("Dashboard", "Dashboard")">DJ</a>
+                            <a href="@Url.Action("Dashboard", "Dashboard")">FB</a>
                         </div>
                         <ul class="sidebar-menu">
-                            <li class="menu-header">DashBoard</li>
-                            <li><a class="nav-link" href="@Url.Action("Dashboard", "Dashboard")"><i class="fas fa-fire"></i> <span>DashBoard</span></a></li>
+                            <li class="menu-header text-info">DashBoard</li>
+                            <li><a class="nav-link" href="@Url.Action("Dashboard", "Dashboard")"><i class="DashBoardIcon"><img src="/ImageStorage/Icons/Dashboard.png" class="img-circle ImageAsIcon" /></i> <span>DashBoard</span></a></li>
 
-                            @*<li class="menu-header">User Management</li>
-                            <li><a class="nav-link" href="@Url.Action("AddUser", "User")"><i class="fas fa-user-plus"></i> <span>Add User</span></a></li>
-                            <li><a class="nav-link" href="@Url.Action("viewAllUser", "User")"><i class="fas fa-users"></i> <span>All Users</span></a></li>
+                            @*<li class="menu-header text-info">User Management</li>
+                            <li><a class="nav-link" href="@Url.Action("AddUser", "User")"><i class="DashBoardIcon"><img src="/ImageStorage/Icons/AddUser.png" class="img-circle ImageAsIcon" /></i> <span>Add User</span></a></li>
+                            <li><a class="nav-link" href="@Url.Action("viewAllUser", "User")"><i class="DashBoardIcon"><img src="/ImageStorage/Icons/ViewAllUsers.png" class="img-circle ImageAsIcon" /></i> <span>All Users</span></a></li>
 
-                            <li class="menu-header">Shop Management</li>
-                            <li><a class="nav-link" href="@Url.Action("AddShop", "Shop")"><i class="fas fa-shopping-bag"></i> <span>Add Shop</span></a></li>
-                            <li><a class="nav-link" href="@Url.Action("ViewAllShops", "Shop")"><i class="fas fa-shopping-basket"></i> <span>All Shops</span></a></li>*@
+                            <li class="menu-header text-info">Shop Management</li>
+                            <li><a class="nav-link" href="@Url.Action("AddShop", "Shop")"><i class="DashBoardIcon"><img src="/ImageStorage/Icons/AddShop.png" class="img-circle ImageAsIcon" /></i> <span>Add Shop</span></a></li>
+                            <li><a class="nav-link" href="@Url.Action("ViewAllShops", "Shop")"><i class="DashBoardIcon"><img src="/ImageStorage/Icons/ViewAllShops.png" class="img-circle ImageAsIcon" /></i> <span>All Shops</span></a></li>*@
 
-                            <li class="menu-header">Order Management</li>
-                            <li><a class="nav-link" href="@Url.Action("AddOrder", "Order")"><i class="fas fa-folder-plus"></i> <span>Add Order</span></a></li>
-                            <li><a class="nav-link" href="@Url.Action("ViewOrders", "Order")"><i class="fas fa-dolly"></i> <span>View Orders</span></a></li>
-                            <li><a class="nav-link" href="@Url.Action("OrdersManagement", "Order")"><i class="fas fa-hand-holding-usd"></i> <span>Orders Management</span></a></li>
+                            <li class="menu-header text-info">Order Management</li>
+                            <li><a class="nav-link" href="@Url.Action("AddOrder", "Order")"><i class="DashBoardIcon"><img src="/ImageStorage/Icons/AddOrder.png" class="img-circle ImageAsIcon" /></i> <span>Add Order</span></a></li>
+                            <li><a class="nav-link" href="@Url.Action("ViewOrders", "Order")"><i class="DashBoardIcon"><img src="/ImageStorage/Icons/ViewOrders.png" class="img-circle ImageAsIcon" /></i> <span>View Orders</span></a></li>
+                            <li><a class="nav-link" href="@Url.Action("OrdersManagement", "Order")"><i class="DashBoardIcon"><img src="/ImageStorage/Icons/OrdersManagement.png" class="img-circle ImageAsIcon" /></i> <span>Orders Management</span></a></li>
 
-                            <li class="menu-header">Sliders</li>
-                            <li><a class="nav-link" href="@Url.Action("AddImage", "Slider")"><i class="fas fa-plus-circle"></i> <span>Add Photos</span></a></li>
-                            <li><a class="nav-link" href="@Url.Action("Gallery", "Slider")"><i class="fab fa-envira"></i> <span>Gallery</span></a></li>
-                            <li><a class="nav-link" href="@Url.Action("SliderSettings", "Slider")"><i class="fas fa-tasks"></i> <span>Slider Management</span></a></li>
+                            <li class="menu-header text-info">Sliders</li>
+                            <li><a class="nav-link" href="@Url.Action("AddImage", "Slider")"><i class="DashBoardIcon"><img src="/ImageStorage/Icons/AddPhoto.png" class="img-circle ImageAsIcon" /></i> <span>Add Photos</span></a></li>
+                            <li><a class="nav-link" href="@Url.Action("Gallery", "Slider")"><i class="DashBoardIcon"><img src="/ImageStorage/Icons/Gallery.png" class="img-circle ImageAsIcon" /></i> <span>Gallery</span></a></li>
+                            <li><a class="nav-link" href="@Url.Action("SliderSettings", "Slider")"><i class="DashBoardIcon"><img src="/ImageStorage/Icons/SlideManagement.png" class="img-circle ImageAsIcon" /></i> <span>Slider Management</span></a></li>
                         </ul>
                     </aside>
                 </div>
