--- a/ShopManagement/Views/Slider/AddImage.cshtml
+++ b/ShopManagement/Views/Slider/AddImage.cshtml
@@ -9,6 +9,8 @@
 <!-- Template CSS -->
 <link rel="stylesheet" href="../../assets/css/style.css">
 <link rel="stylesheet" href="../../assets/css/components.css">
+<!-- CSS Libraries -->
+<link rel="stylesheet" href="../../assets/modules/izitoast/css/iziToast.min.css">
 <section class="section">
     <div class="section-header">
         <h1>Add Files</h1>
@@ -38,7 +40,8 @@
                                 <input name="file" type="file" multiple />
                             </div>
                         </form>
-                        <button type="button" class="btn btn-block btn-info SubmitUploadedImages">Submit</button>
+                        <br />
+                        <button type="button" class="btn btn-block btn-info SubmitUploadedImages" style="display:none;">Submit</button>
                     </div>
                 </div>
             </div>
@@ -55,3 +58,5 @@
 <!-- Page Specific JS File -->
 @*<script src="../../assets/js/page/components-multiple-upload.js"></script>*@
 <script src="~/App-Assests/Js/Slider.js"></script>
+<!-- JS Libraies -->
+<script src="../../assets/modules/izitoast/js/iziToast.min.js"></script>
