--- a/ShopManagement/Views/Slider/Gallery.cshtml
+++ b/ShopManagement/Views/Slider/Gallery.cshtml
@@ -3,6 +3,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <link rel="stylesheet" href="../../assets/modules/chocolat/dist/css/chocolat.css">
+
 <section class="section">
     <div class="section-header">
         <h1>Gallery</h1>
@@ -23,36 +24,72 @@
                             <div class="card-body">
                                 <p class="text-success">High Quality</p>
                                 <div class="gallery">
-                                    <div class="gallery-item" data-image="../../assets/img/news/img01.jpg" data-title="Image 1"></div>
-                                    <div class="gallery-item" data-image="../../assets/img/news/img02.jpg" data-title="Image 2"></div>
-                                    <div class="gallery-item" data-image="../../assets/img/news/img03.jpg" data-title="Image 3"></div>
-                                    <div class="gallery-item" data-image="../../assets/img/news/img04.jpg" data-title="Image 4"></div>
-                                    <div class="gallery-item" data-image="../../assets/img/news/img05.jpg" data-title="Image 5"></div>
-                                    <div class="gallery-item" data-image="../../assets/img/news/img06.jpg" data-title="Image 6"></div>
-                                    <div class="gallery-item" data-image="../../assets/img/news/img07.jpg" data-title="Image 7"></div>
-                                    <div class="gallery-item" data-image="../../assets/img/news/img08.jpg" data-title="Image 8"></div>
+                                    @if (Model.HighQualityImage.Count <= 0)
+                                    {
+                                        <div class="col-md-12">
+                                            <div class="card card-warning">
+                                                <div class="card-header">
+                                                    <h4>No Images Found !</h4>
+                                                </div>
+                                                <div class="card-body" style="text-align:center;">
+                                                    <p>Add New Images to see the list here.. <i><b><a href="@Url.Action("AddImage", "Slider")">Add Image</a></b></i></p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    }
+                                    else
+                                    {
+                                        foreach (var item in Model.HighQualityImage)
+                                        {
+                                            <div class="gallery-item" data-image="@item.Image" data-title="@item.Id"></div>
+                                        }
+                                    }
                                 </div>
                                 <p class="text-warning">Medium Quality</p>
                                 <div class="gallery">
-                                    <div class="gallery-item" data-image="../../assets/img/news/img01.jpg" data-title="Image 1"></div>
-                                    <div class="gallery-item" data-image="../../assets/img/news/img02.jpg" data-title="Image 2"></div>
-                                    <div class="gallery-item" data-image="../../assets/img/news/img03.jpg" data-title="Image 3"></div>
-                                    <div class="gallery-item" data-image="../../assets/img/news/img04.jpg" data-title="Image 4"></div>
-                                    <div class="gallery-item" data-image="../../assets/img/news/img05.jpg" data-title="Image 5"></div>
-                                    <div class="gallery-item" data-image="../../assets/img/news/img06.jpg" data-title="Image 6"></div>
-                                    <div class="gallery-item" data-image="../../assets/img/news/img07.jpg" data-title="Image 7"></div>
-                                    <div class="gallery-item" data-image="../../assets/img/news/img08.jpg" data-title="Image 8"></div>
+                                    @if (Model.LowQualityImage.Count <= 0)
+                                    {
+                                        <div class="col-md-12">
+                                            <div class="card card-warning">
+                                                <div class="card-header">
+                                                    <h4>No Images Found !</h4>
+                                                </div>
+                                                <div class="card-body" style="text-align:center;">
+                                                    <p>Add New Images to see the list here.. <i><b><a href="@Url.Action("AddImage", "Slider")">Add Image</a></b></i></p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    }
+                                    else
+                                    {
+                                        foreach (var item in Model.LowQualityImage)
+                                        {
+                                            <div class="gallery-item" data-image="@item.Image" data-title="@item.Id"></div>
+                                        }
+                                    }
                                 </div>
                                 <p class="text-danger">Low Quality</p>
                                 <div class="gallery">
-                                    <div class="gallery-item" data-image="../../assets/img/news/img01.jpg" data-title="Image 1"></div>
-                                    <div class="gallery-item" data-image="../../assets/img/news/img02.jpg" data-title="Image 2"></div>
-                                    <div class="gallery-item" data-image="../../assets/img/news/img03.jpg" data-title="Image 3"></div>
-                                    <div class="gallery-item" data-image="../../assets/img/news/img04.jpg" data-title="Image 4"></div>
-                                    <div class="gallery-item" data-image="../../assets/img/news/img05.jpg" data-title="Image 5"></div>
-                                    <div class="gallery-item" data-image="../../assets/img/news/img06.jpg" data-title="Image 6"></div>
-                                    <div class="gallery-item" data-image="../../assets/img/news/img07.jpg" data-title="Image 7"></div>
-                                    <div class="gallery-item" data-image="../../assets/img/news/img08.jpg" data-title="Image 8"></div>
+                                    @if (Model.MediumQualityImage.Count <= 0)
+                                    {
+                                        <div class="col-md-12">
+                                            <div class="card card-warning">
+                                                <div class="card-header">
+                                                    <h4>No Images Found !</h4>
+                                                </div>
+                                                <div class="card-body" style="text-align:center;">
+                                                    <p>Add New Images to see the list here.. <i><b><a href="@Url.Action("AddImage", "Slider")">Add Image</a></b></i></p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    }
+                                    else
+                                    {
+                                        foreach (var item in Model.MediumQualityImage)
+                                        {
+                                            <div class="gallery-item" data-image="@item.Image" data-title="@item.Id"></div>
+                                        }
+                                    }
                                 </div>
                             </div>
                         </div>
