--- a/ShopManagement/Views/User/viewAllUser.cshtml
+++ b/ShopManagement/Views/User/viewAllUser.cshtml
@@ -98,6 +98,7 @@
                 <div class="EditUser">
                     <form id="EditUserForm">
                         <input type="hidden" class="SelectedUserId" />
+                        <input type="hidden" class="SelectedUserIsAdminStatus" />
                         <div class="form-group">
                             <label>Name</label>
                             <input type="text" class="form-control UserName">
@@ -163,7 +164,7 @@
                             <label>Image</label>
                             <input type="file" class="form-control invoice-input UserSelectedImage" id="UserImage" accept="image/x-png,image/gif,image/jpeg" style="padding:.375rem .75rem;">
                         </div>
-                        <div class="form-group">
+                        <div class="form-group SpecialUserStautus">
                             <label>Special User</label>
                             <select class="form-control select2 IsMediatorUser">
                                 <option value="0">No</option>
