--- a/ShopManagement/App-Assests/CSS/Custom.css
+++ b/ShopManagement/App-Assests/CSS/Custom.css
@@ -10,3 +10,9 @@
     margin-top: 10px;
     display: none !important;
 }
+
+.customGalleryItems {
+    width: 200px;
+    height: 200px;
+    float: left !important;
+}
