--- a/ShopManagement/Views/Dashboard/Dashboard.cshtml
+++ b/ShopManagement/Views/Dashboard/Dashboard.cshtml
@@ -7,36 +7,31 @@
 <div>
     <section class="section">
         <div class="row">
-            <div class="col-12 col-sm-6 col-lg-6">
-                <div class="card">
-                    <div class="card-header">
-                        <h4>Sample Models</h4>
-                    </div>
-                    <div class="card-body">
-                        <div class="owl-carousel owl-theme slider" id="slider1">
-                            <div><img alt="image" src="../../assets/img/news/img01.jpg"></div>
-                            <div><img alt="image" src="../../assets/img/news/img08.jpg"></div>
-                            <div><img alt="image" src="../../assets/img/news/img10.jpg"></div>
-                            <div><img alt="image" src="../../assets/img/news/img09.jpg"></div>
+            @foreach (var item in Model)
+            {
+                <div class="col-12 col-sm-6 col-lg-6">
+                    <div class="card">
+                        <div class="card-header">
+                            <h4>@item.Name</h4>
+                        </div>
+                        <div class="card-body">
+                            <div class="owl-carousel owl-theme slider" id="slider1">
+                                @if (item.Images != null && item.Images.Count > 0)
+                                {
+                                    foreach (var ImageItem in item.Images)
+                                    {
+                                        <div><img alt="image" src="@ImageItem"></div>
+                                    }
+                                }
+                                else
+                                {
+                                    <div><img alt="image" src="/assets/img/news/img01.jpg"></div>
+                                }
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-12 col-sm-6 col-lg-6">
-                <div class="card">
-                    <div class="card-header">
-                        <h4>Sample Models</h4>
-                    </div>
-                    <div class="card-body">
-                        <div class="owl-carousel owl-theme slider" id="slider1">
-                            <div><img alt="image" src="../../assets/img/news/img01.jpg"></div>
-                            <div><img alt="image" src="../../assets/img/news/img08.jpg"></div>
-                            <div><img alt="image" src="../../assets/img/news/img10.jpg"></div>
-                            <div><img alt="image" src="../../assets/img/news/img09.jpg"></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            }
         </div>
         <div class="row">
             <div class="col-lg-4 col-md-4 col-sm-12">
@@ -45,30 +40,12 @@
                         <div class="card-stats-title">
                             Order Statistics -
                             <div class="dropdown d-inline">
-                                <a class="font-weight-600 dropdown-toggle" data-toggle="dropdown" href="javascript:void(0)" id="orders-month">Shop 2</a>
+                                <a class="font-weight-600 dropdown-toggle" data-toggle="dropdown" href="javascript:void(0)" id="orders-month">Select Shop</a>
                                 <ul class="dropdown-menu dropdown-menu-sm">
                                     <li class="dropdown-title">Select Shop</li>
                                     <li><a href="javascript:void(0)" class="dropdown-item">Shop 1</a></li>
-                                    <li><a href="javascript:void(0)" class="dropdown-item active">Shop 2</a></li>
+                                    <li><a href="javascript:void(0)" class="dropdown-item">Shop 2</a></li>
                                     <li><a href="javascript:void(0)" class="dropdown-item">Shop 3</a></li>
-                                </ul>
-                            </div>&nbsp;
-                            <div class="dropdown d-inline">
-                                <a class="font-weight-600 dropdown-toggle" data-toggle="dropdown" href="javascript:void(0)" id="orders-month">August</a>
-                                <ul class="dropdown-menu dropdown-menu-sm">
-                                    <li class="dropdown-title">Select Month</li>
-                                    <li><a href="javascript:void(0)" class="dropdown-item">January</a></li>
-                                    <li><a href="javascript:void(0)" class="dropdown-item">February</a></li>
-                                    <li><a href="javascript:void(0)" class="dropdown-item">March</a></li>
-                                    <li><a href="javascript:void(0)" class="dropdown-item">April</a></li>
-                                    <li><a href="javascript:void(0)" class="dropdown-item">May</a></li>
-                                    <li><a href="javascript:void(0)" class="dropdown-item">June</a></li>
-                                    <li><a href="javascript:void(0)" class="dropdown-item">July</a></li>
-                                    <li><a href="javascript:void(0)" class="dropdown-item active">August</a></li>
-                                    <li><a href="javascript:void(0)" class="dropdown-item">September</a></li>
-                                    <li><a href="javascript:void(0)" class="dropdown-item">October</a></li>
-                                    <li><a href="javascript:void(0)" class="dropdown-item">November</a></li>
-                                    <li><a href="javascript:void(0)" class="dropdown-item">December</a></li>
                                 </ul>
                             </div>
                         </div>
