--- a/ShopManagement/Views/Order/OrdersManagement.cshtml
+++ b/ShopManagement/Views/Order/OrdersManagement.cshtml
@@ -16,7 +16,21 @@
     </div>
 
     <div class="section-body">
-        <div class="row">
+        @if (Model.Count <= 0)
+        {
+            <div class="col-md-12">
+                <div class="card card-warning">
+                    <div class="card-header">
+                        <h4>No Shops Found !</h4>
+                    </div>
+                    <div class="card-body" style="text-align:center;">
+                        <p>Add Shops Before Adding Orders.. <i><b><a href="@Url.Action("AddShop", "Shop")">Add Shop</a></b></i></p>
+                    </div>
+                </div>
+            </div>
+        }else
+        {
+            <div class="row">
             <div class="col-12">
                 <div class="card">
                     <div class="card-header">
@@ -230,6 +244,8 @@
                 </div>
             </div>
         </div>
+        }
+        
     </div>
 </section>
 
