--- a/ShopManagement/Views/Shared/_Layout.cshtml
+++ b/ShopManagement/Views/Shared/_Layout.cshtml
@@ -75,25 +75,25 @@
                         </div>
                         <ul class="sidebar-menu">
                             <li class="menu-header text-info">DashBoard</li>
-                            <li><a class="nav-link" href="@Url.Action("Dashboard", "Dashboard")"><i class="DashBoardIcon"><img src="/ImageStorage/Icons/Dashboard.png" class="img-circle ImageAsIcon" /></i> <span>DashBoard</span></a></li>
+                            <li><a class="nav-link" href="@Url.Action("Dashboard", "Dashboard")" id="DashboardPage"><i class="DashBoardIcon"><img src="/ImageStorage/Icons/Dashboard.png" class="img-circle ImageAsIcon" /></i> <span>DashBoard</span></a></li>
 
                             <li class="menu-header text-info">User Management</li>
-                            <li><a class="nav-link" href="@Url.Action("AddUser", "User")"><i class="DashBoardIcon"><img src="/ImageStorage/Icons/AddUser.png" class="img-circle ImageAsIcon" /></i> <span>Add User</span></a></li>
-                            <li><a class="nav-link" href="@Url.Action("viewAllUser", "User")"><i class="DashBoardIcon"><img src="/ImageStorage/Icons/ViewAllUsers.png" class="img-circle ImageAsIcon" /></i> <span>All Users</span></a></li>
+                            <li><a class="nav-link" href="@Url.Action("AddUser", "User")" id="AddUserPage"><i class="DashBoardIcon"><img src="/ImageStorage/Icons/AddUser.png" class="img-circle ImageAsIcon" /></i> <span>Add User</span></a></li>
+                            <li><a class="nav-link" href="@Url.Action("viewAllUser", "User")" id="ViewUserPage"><i class="DashBoardIcon"><img src="/ImageStorage/Icons/ViewAllUsers.png" class="img-circle ImageAsIcon" /></i> <span>All Users</span></a></li>
 
                             <li class="menu-header text-info">Shop Management</li>
-                            <li><a class="nav-link" href="@Url.Action("AddShop", "Shop")"><i class="DashBoardIcon"><img src="/ImageStorage/Icons/AddShop.png" class="img-circle ImageAsIcon" /></i> <span>Add Shop</span></a></li>
-                            <li><a class="nav-link" href="@Url.Action("ViewAllShops", "Shop")"><i class="DashBoardIcon"><img src="/ImageStorage/Icons/ViewAllShops.png" class="img-circle ImageAsIcon" /></i> <span>All Shops</span></a></li>
+                            <li><a class="nav-link" href="@Url.Action("AddShop", "Shop")" id="AddShopPage"><i class="DashBoardIcon"><img src="/ImageStorage/Icons/AddShop.png" class="img-circle ImageAsIcon" /></i> <span>Add Shop</span></a></li>
+                            <li><a class="nav-link" href="@Url.Action("ViewAllShops", "Shop")" id="ViewShopPage"><i class="DashBoardIcon"><img src="/ImageStorage/Icons/ViewAllShops.png" class="img-circle ImageAsIcon" /></i> <span>All Shops</span></a></li>
 
                             <li class="menu-header text-info">Order Management</li>
-                            <li><a class="nav-link" href="@Url.Action("AddOrder", "Order")"><i class="DashBoardIcon"><img src="/ImageStorage/Icons/AddOrder.png" class="img-circle ImageAsIcon" /></i> <span>Add Order</span></a></li>
-                            <li><a class="nav-link" href="@Url.Action("ViewOrders", "Order")"><i class="DashBoardIcon"><img src="/ImageStorage/Icons/ViewOrders.png" class="img-circle ImageAsIcon" /></i> <span>View Orders</span></a></li>
-                            <li><a class="nav-link" href="@Url.Action("OrdersManagement", "Order")"><i class="DashBoardIcon"><img src="/ImageStorage/Icons/OrdersManagement.png" class="img-circle ImageAsIcon" /></i> <span>Orders Management</span></a></li>
+                            <li><a class="nav-link" href="@Url.Action("AddOrder", "Order")" id="AddOrderPage"><i class="DashBoardIcon"><img src="/ImageStorage/Icons/AddOrder.png" class="img-circle ImageAsIcon" /></i> <span>Add Order</span></a></li>
+                            <li><a class="nav-link" href="@Url.Action("ViewOrders", "Order")" id="ViewOrderPage"><i class="DashBoardIcon"><img src="/ImageStorage/Icons/ViewOrders.png" class="img-circle ImageAsIcon" /></i> <span>View Orders</span></a></li>
+                            <li><a class="nav-link" href="@Url.Action("OrdersManagement", "Order")" id="ManageOrderPage"><i class="DashBoardIcon"><img src="/ImageStorage/Icons/OrdersManagement.png" class="img-circle ImageAsIcon" /></i> <span>Orders Management</span></a></li>
 
                             <li class="menu-header text-info">Sliders</li>
-                            <li><a class="nav-link" href="@Url.Action("AddImage", "Slider")"><i class="DashBoardIcon"><img src="/ImageStorage/Icons/AddPhoto.png" class="img-circle ImageAsIcon" /></i> <span>Add Photos</span></a></li>
-                            <li><a class="nav-link" href="@Url.Action("Gallery", "Slider")"><i class="DashBoardIcon"><img src="/ImageStorage/Icons/Gallery.png" class="img-circle ImageAsIcon" /></i> <span>Gallery</span></a></li>
-                            <li><a class="nav-link" href="@Url.Action("SliderSettings", "Slider")"><i class="DashBoardIcon"><img src="/ImageStorage/Icons/SlideManagement.png" class="img-circle ImageAsIcon" /></i> <span>Slider Management</span></a></li>
+                            <li><a class="nav-link" href="@Url.Action("AddImage", "Slider")" id="AddImagePage"><i class="DashBoardIcon"><img src="/ImageStorage/Icons/AddPhoto.png" class="img-circle ImageAsIcon" /></i> <span>Add Photos</span></a></li>
+                            <li><a class="nav-link" href="@Url.Action("Gallery", "Slider")" id="GalleryPage"><i class="DashBoardIcon"><img src="/ImageStorage/Icons/Gallery.png" class="img-circle ImageAsIcon" /></i> <span>Gallery</span></a></li>
+                            <li><a class="nav-link" href="@Url.Action("SliderSettings", "Slider")" id="SliderPage"><i class="DashBoardIcon"><img src="/ImageStorage/Icons/SlideManagement.png" class="img-circle ImageAsIcon" /></i> <span>Slider Management</span></a></li>
                         </ul>
                     </aside>
                 </div>
@@ -209,5 +209,46 @@
     <script src="../../assets/js/custom.js"></script>
     <script src="~/App-Assests/Js/Custom.js"></script>
 
+    <script>
+        $(document).ready(function () {
+            var URL = window.location.pathname;
+            switch (URL) {
+                case "/Dashboard/Dashboard":
+                    $("#DashboardPage").parent().addClass("active");
+                    break;
+                case "/User/AddUser":
+                    $("#AddUserPage").parent().addClass("active");
+                    break;
+                case "/User/viewAllUser":
+                    $("#ViewUserPage").parent().addClass("active");
+                    break;
+                case "/Shop/AddShop":
+                    $("#AddShopPage").parent().addClass("active");
+                    break;
+                case "/Shop/ViewAllShops":
+                    $("#ViewShopPage").parent().addClass("active");
+                    break;
+                case "/Order/AddOrder":
+                    $("#AddOrderPage").parent().addClass("active");
+                    break;
+                case "/Order/ViewOrders":
+                    $("#ViewOrderPage").parent().addClass("active");
+                    break;
+                case "/Order/OrdersManagement":
+                    $("#ManageOrderPage").parent().addClass("active");
+                    break;
+                case "/Slider/AddImage":
+                    $("#AddImagePage").parent().addClass("active");
+                    break;
+                case "/Slider/Gallery":
+                    $("#GalleryPage").parent().addClass("active");
+                    break;
+                case "/Slider/SliderSettings":
+                    $("#SliderPage").parent().addClass("active");
+                    break;
+            }
+        });
+
+    </script>
 </body>
 </html>
