--- a/ShopManagement/Views/Shop/ViewAllShops.cshtml
+++ b/ShopManagement/Views/Shop/ViewAllShops.cshtml
@@ -42,7 +42,7 @@
                 <div class="col-md-12">
                     <div class="card card-warning">
                         <div class="card-header">
-                            <h4>No Data Found !</h4>
+                            <h4>No Shops Found !</h4>
                         </div>
                         <div class="card-body" style="text-align:center;">
                             <p>Add Shops to see the list here.. <i><b><a href="@Url.Action("AddShop", "Shop")">Add Shop</a></b></i></p>
