--- a/ShopManagement/Views/Slider/AddImage.cshtml
+++ b/ShopManagement/Views/Slider/AddImage.cshtml
@@ -37,7 +37,7 @@
                         </div>
                         <form action="#" class="dropzone" id="mydropzone">
                             <div class="fallback">
-                                <input name="file" type="file" multiple />
+                                <input name="file" type="file" multiple accept="image/x-png,image/gif,image/jpeg" />
                             </div>
                         </form>
                         <br />
